# nexspot

./: .cursorrules  .gitignore  CHANGELOG.md  INBOX.md  PROJECT_CONTEXT.md  README.md  build_errors.txt  index.html  package-lock.json  package.json  vite.config.ts
.agent/Rules/: code_philosophy.md  core_governance.md  expert_review_governance.md  flash_reinforcement.md  refactoring_expert.md  rust_expert.md
backup/: .cursorrules  package-lock.json  package.json
backup/src/: App.css  App.tsx
backup/src-tauri/: Cargo.toml  build_output.txt  build_output_v2.txt  build_output_v3.txt  check_error.txt  check_output.txt  shortcuts.json  tauri.conf.json
docs/: ARCHITECTURE_LOCKED.md  ARCHITECTURE_REFERENCE.md  CAPTURE_PIPELINE_AUDIT.md  DECISION_LOG.md  ENGINE_REFERENCE.md  TECHNICAL_DEBT.md  TECHNICAL_SPEC_1.0.4.md  architecture_panorama.md  pipeline_implementation_plan.md  refactoring_plan.md
docs/archive/: architecture_master_plan.md  (+1 more)
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  build_errors.txt  build_errors_utf8.txt  build_log.txt  build_output.txt  build_output_json.txt  build_sample.txt  check_error.txt  diag_output.txt  error.txt  error_ascii.txt  errors_readable.txt  errors_split.txt  errors_utf8.txt  full_errors.txt  output.txt  output_v2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  main.rs  test_scene.rs
src-tauri/src/capture/: engine.rs
src-tauri/src/commands/: ai.rs  capture.rs  config.rs  mod.rs  pin.rs  shortcuts.rs
src-tauri/src/service/: capture_service.rs  config.rs  hotkey.rs  l10n.rs  logger.rs  mod.rs  native_overlay.rs  notification.rs  overlay_manager.rs  pin.rs  shortcut_manager.rs
src-tauri/src/service/ai/: mod.rs  openai.rs
src-tauri/src/service/config/: defaults.rs  error.rs  fonts.rs  hotkey.rs  io.rs  manager.rs  mod.rs  types.rs
src-tauri/src/service/hotkey/: mod.rs
src-tauri/src/service/native_overlay/: capture.rs  commands.rs  engine_mgmt.rs  events.rs  handlers.rs  input_handler.rs  interaction.rs  magnifier.rs  manager.rs  mod.rs  ocr.rs  save.rs  snapping.rs  state.rs  toolbar.rs
src-tauri/src/service/native_overlay/interaction/: mod.rs  mouse_down.rs  mouse_move.rs  mouse_up.rs
src-tauri/src/service/native_overlay/modes/: fullscreen.rs  mod.rs  selection.rs  snapshot.rs  window.rs
src-tauri/src/service/native_overlay/render/: magnifier.rs  mod.rs  selection.rs  toolbar.rs
src-tauri/src/service/native_overlay/render/drawing/: mod.rs  traits.rs
src-tauri/src/service/native_overlay/render/drawing/tools/: arrow.rs  effects.rs  freehand.rs  mod.rs  number.rs  shapes.rs  text.rs
src-tauri/src/service/native_overlay/render/toolbar/: builder.rs  events.rs  layout.rs  mod.rs  property_bar.rs  render.rs  tooltip.rs  types.rs
src-tauri/src/service/native_overlay/render/vello_engine/: mod.rs
src-tauri/src/service/native_overlay/render/vello_engine/renderer/: mod.rs  utils.rs
src-tauri/src/service/native_overlay/render/vello_engine/renderer/tools/: arrow.rs  effects.rs  freehand.rs  mod.rs  number.rs  shapes.rs  text.rs
src-tauri/src/service/native_overlay/render/vello_engine/renderer/ui/: icons.rs  magnifier.rs  mod.rs  selection.rs  toolbar.rs
src-tauri/src/service/native_overlay/render/vello_engine/renderer/ui/property_bar/: colors.rs  common.rs  effects.rs  font_size.rs  mod.rs  stroke.rs
src-tauri/src/service/native_overlay/state/: drawing_object.rs  mod.rs  overlay_state.rs  types.rs
src-tauri/src/service/ocr/: mod.rs  traits.rs
src-tauri/src/service/ocr/engines/: windows.rs
src-tauri/src/service/tray/: mod.rs
src-tauri/src/service/win32/: bitmap.rs  gdi.rs  gdiplus.rs  mod.rs  monitor.rs  send_sync.rs  window.rs
src-tauri/src/service/win32/gdi/: cache.rs  dc.rs  effects.rs  mod.rs  resources.rs  shapes.rs  text.rs
src-tauri/src/service/win32/wgc/: capture.rs
src-tauri/src/service/workflow/: mod.rs
(+61 files in other folders)
