[package]
name = "hyper-lens"
version = "0.1.0"
description = "A High-Performance Windows Screenshot Tool"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "hyper_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] } # Enable tray
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
windows-capture = "1.5.0"
global-hotkey = "0.6.0"
thiserror = "1.0" # Good for error handling
chrono = "0.4"
base64 = "0.22.1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
]
