[package]
name = "hyper-lens"
version = "0.2.1"
description = "A High-Performance Windows Screenshot Tool"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "hyper_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
windows-capture = "1.5.0"
global-hotkey = "0.6.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
base64 = "0.22.1"
rayon = "1.10"
log = "0.4"
simplelog = "0.12"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
]
